force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/aos_Lookup_Rollup_Setting__mdt.object-meta.xml
<CustomObject>
    <label>AOS Lookup Rollup Setting</label>
    <pluralLabel>AOS Lookup Rollup Settings</pluralLabel>
</CustomObject>