force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/fields/aos_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>