force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/fields/aos_Order__c.field-meta.xml
<CustomField>
    <fullName>aos_Order__c</fullName>
    <description>SObject execution order</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>