force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/fields/aos_Processors__c.field-meta.xml
<CustomField>
    <fullName>aos_Processors__c</fullName>
    <description>Comma separated processors list</description>
    <label>Processors</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>