force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/fields/aos_Scope_size__c.field-meta.xml
<CustomField>
    <fullName>aos_Scope_size__c</fullName>
    <description>Batch scope size</description>
    <label>Scope size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>