force-app/main/default/objects/aos_Lookup_Rollup_Setting__mdt/fields/aos_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_SObject_Type__c</fullName>
    <description>Parent lookup rollup sobject</description>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>